last update for proj

--- a/config/config.ini
+++ b/config/config.ini
@@ -22,5 +22,5 @@ driver = {MySQL ODBC 9.2 Unicode Driver}
 host = localhost
 port = 3306
 user = root
-password =
-database =
+password =xxxxxxxx
+database =MydatabaseP1
