--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,46 @@
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
 cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
 cryptography==44.0.2
-cx-oracle==8.3.0
+cx_Oracle==8.3.0
 demographics==0.0.1
+gitdb==4.0.12
+GitPython==3.1.44
 greenlet==3.1.1
+idna==3.10
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+MarkupSafe==3.0.2
 mysql-connector-python==9.2.0
+narwhals==1.35.0
 numpy==2.0.2
 oracledb==3.0.0
+packaging==24.2
 pandas==2.2.3
+pillow==11.2.1
+protobuf==5.29.4
+pyarrow==19.0.1
 pycparser==2.22
+pydeck==0.9.1
 pyodbc==5.2.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.24.0
 six==1.17.0
-sqlalchemy==2.0.39
-typing-extensions==4.12.2
+smmap==5.0.2
+SQLAlchemy==2.0.39
+streamlit==1.44.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.4.2
+typing_extensions==4.12.2
 tzdata==2025.2
+urllib3==2.4.0
